# OvumJitX64

./: .gitignore  CMakeLists.txt  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  README.md
.github/workflows/: ci_tests.yml
jit/: AsmCompiler.cpp  AsmCompiler.hpp  AsmData.hpp  CMakeLists.txt  JitExecutor.cpp  JitExecutor.hpp  JitExecutorFactory.cpp  JitExecutorFactory.hpp  OilCommandAsmCompiler.cpp  OilCommandAsmCompiler.hpp
jit/machine-code-runner/: AsmDataBuffer.cpp  AsmDataBuffer.hpp  ExecutableMemory.cpp  ExecutableMemory.hpp  MachineCodeFunction.cpp  MachineCodeFunction.hpp  MachineCodeRunner.cpp  MachineCodeRunner.hpp
jit/oil-to-asm-realisation/: AsmComplexOperationManager.cpp  AsmComplexOperationManager.hpp  AsmToBytes.cpp  AsmToBytes.hpp  OilToAsmBooleanOperations.cpp  OilToAsmByteOperations.cpp  OilToAsmComplexOperations.cpp  OilToAsmFloatOperations.cpp  OilToAsmIntegerOperations.cpp  OilToAsmLocalDataOperations.cpp  OilToAsmStackOperations.cpp
jit/oil-to-asm-realisation/optimisers/: PushPopOptimiser.cpp  PushPopOptimiser.hpp
